--- a/Wiki/v3.1-migration-guide.md
+++ b/Wiki/v3.1-migration-guide.md
@@ -49,29 +49,42 @@ Please refer [step 2](https://github.com/OfficeDev/microsoft-teams-company-commu
 
     1. Delete the entry to **Redirect URIs**.
 
+    1. Under **Implicit grant**, un-check **ID tokens**.
+
     1. Click **Save** to commit your changes.
 
-1. Back under **Manage**, click on **Expose an API**.
+1. Back under **Manage**, click on **Expose an API**.This step is to remove the registered domain from current registration so that it can be migrated to author's registration, as backend api will be exposed by author's application. Please follow the below steps as per the order mentioned.
 
-    1. Delete the list of Authorized client applications. 
+    1. First, delete the list of Authorized client applications. 
 
-    1. Click on the scope defined and disable the scope. Click on Save to commit your changes.
+    1. Then, click on the scope defined and disable the scope. Click on Save to commit your changes.
 
     1. Now, click on the scope defined and then click on Delete.
 
-    1. Then, delete the **Application ID URI**.
+    1. Then, to delete the **Application ID URI** there are multiple steps involved. The steps will involve delete and update operation to completely remove the **Application ID URI** from the current Azure AD object Id.
     
-    1. Click on the Set **Application ID URI** and then Click on Save.-- [TODO] hack to clear the existing application Id uri.
-
+    1. Delete the **Application ID URI**.
+    ![Azure AD expose an api page](images/delete_applicationuri.png)
+    1. Click on the Set **Application ID URI** and then Click on Save.
+    ![Azure AD expose an api page](images/set_applicationuri.png)
     1. Click **Save** to commit your changes.
 
-1.  Goto the Azure AD portal where the app is deployed.
+1. Back under **Manage**, click on **Manifest**.
 
-    1. Select **Enterprise applications** and then find the Company Communicator app.
+   1. In the editor that appears, find the `optionalClaims` property in the JSON Azure AD application manifest, and replace it with the following block:
 
-    1. In the **Manage** section in the left pane, select **Properties**.
+   ```
+   "optionalClaims": null,
+   ```
 
-    1. Select **Delete**, and then **Yes** to confirm you want to delete the app from your Azure AD tenant.
+   1. Click **Save** to commit your changes.
+
+1. Select **API Permissions** blade from the left hand side.
+
+    1. Click on **Group.Read.All** permission and then click on remove permission.
+     ![Azure AD api permission page](images/remove_permission.png)
+
+    1. Repeat the same for other permissions. Note: Do not delete the **User.Read** permission.
 
 ### 4. Deploy to your Azure subscription
 
